// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boards component add board click snapshot 1`] = `
<Boards
  boards={Array []}
  dispatch={[Function]}
>
  <div>
    <ul>
      <li
        key="0"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="2skdde39hzdo08aqcdgd"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="XML Health"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="1"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="14w43d4opubteu021ato"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Bedfordshire Illinois Liaison"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="2"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="kd5o3ve2858vpjxd7wjp"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Sports Analyst Cambridgeshire"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
    </ul>
    <input
      name="addBoard"
      onClick={[Function]}
      type="button"
      value="Add Board"
    />
  </div>
</Boards>
`;

exports[`Boards component add board click snapshot 2`] = `
<Boards
  boards={Array []}
  dispatch={[Function]}
>
  <div>
    <ul>
      <li
        key="0"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="2skdde39hzdo08aqcdgd"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="XML Health"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="1"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="14w43d4opubteu021ato"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Bedfordshire Illinois Liaison"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="2"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="kd5o3ve2858vpjxd7wjp"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Sports Analyst Cambridgeshire"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
    </ul>
    <input
      name="addBoard"
      onClick={[Function]}
      type="button"
      value="Add Board"
    />
    <CreateItems
      addItems={[Function]}
      name="boardInput"
      onAddInputChanged={[Function]}
    >
      <form
        className="list-form"
      >
        <input
          name="boardInput"
          onChange={[Function]}
          type="text"
        />
        <button
          onClick={[Function]}
          type="submit"
          value="Submit"
        />
      </form>
    </CreateItems>
  </div>
</Boards>
`;

exports[`Boards component boards snapshot 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <span
        onClick={[Function]}
      >
        <input
          disabled={true}
          id="2skdde39hzdo08aqcdgd"
          name="boardName"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="XML Health"
        />
      </span>
      <input
        name="deleteBoard"
        onClick={[Function]}
        type="button"
        value="Delete Board"
      />
      <input
        name="editBoard"
        onClick={[Function]}
        type="button"
        value="Edit Board"
      />
    </li>
    <li
      key="1"
    >
      <span
        onClick={[Function]}
      >
        <input
          disabled={true}
          id="14w43d4opubteu021ato"
          name="boardName"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="Bedfordshire Illinois Liaison"
        />
      </span>
      <input
        name="deleteBoard"
        onClick={[Function]}
        type="button"
        value="Delete Board"
      />
      <input
        name="editBoard"
        onClick={[Function]}
        type="button"
        value="Edit Board"
      />
    </li>
    <li
      key="2"
    >
      <span
        onClick={[Function]}
      >
        <input
          disabled={true}
          id="kd5o3ve2858vpjxd7wjp"
          name="boardName"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="Sports Analyst Cambridgeshire"
        />
      </span>
      <input
        name="deleteBoard"
        onClick={[Function]}
        type="button"
        value="Delete Board"
      />
      <input
        name="editBoard"
        onClick={[Function]}
        type="button"
        value="Edit Board"
      />
    </li>
  </ul>
  <input
    name="addBoard"
    onClick={[Function]}
    type="button"
    value="Add Board"
  />
</div>
`;

exports[`Boards component delete board snapshot 1`] = `
<Boards
  boards={Array []}
  deleteBoard={[Function]}
  dispatch={[Function]}
>
  <div>
    <ul>
      <li
        key="0"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="2skdde39hzdo08aqcdgd"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="XML Health"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="1"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="14w43d4opubteu021ato"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Bedfordshire Illinois Liaison"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="2"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="kd5o3ve2858vpjxd7wjp"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Sports Analyst Cambridgeshire"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
    </ul>
    <input
      name="addBoard"
      onClick={[Function]}
      type="button"
      value="Add Board"
    />
  </div>
</Boards>
`;

exports[`Boards component delete board snapshot 2`] = `
<Boards
  boards={Array []}
  deleteBoard={[Function]}
  dispatch={[Function]}
>
  <div>
    <ul>
      <li
        key="0"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="2skdde39hzdo08aqcdgd"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="XML Health"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="1"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="14w43d4opubteu021ato"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Bedfordshire Illinois Liaison"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="2"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="kd5o3ve2858vpjxd7wjp"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Sports Analyst Cambridgeshire"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
    </ul>
    <input
      name="addBoard"
      onClick={[Function]}
      type="button"
      value="Add Board"
    />
  </div>
</Boards>
`;

exports[`Boards component update board snapshot 1`] = `
<Boards
  boards={Array []}
  updateBoard={[Function]}
>
  <div>
    <ul>
      <li
        key="0"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="2skdde39hzdo08aqcdgd"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="XML Health"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="1"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="14w43d4opubteu021ato"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Bedfordshire Illinois Liaison"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="2"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="kd5o3ve2858vpjxd7wjp"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Sports Analyst Cambridgeshire"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
    </ul>
    <input
      name="addBoard"
      onClick={[Function]}
      type="button"
      value="Add Board"
    />
  </div>
</Boards>
`;

exports[`Boards component update board snapshot 2`] = `
<Boards
  boards={Array []}
  updateBoard={[Function]}
>
  <div>
    <ul>
      <li
        key="0"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="2skdde39hzdo08aqcdgd"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="testing"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="1"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="14w43d4opubteu021ato"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Bedfordshire Illinois Liaison"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
      <li
        key="2"
      >
        <span
          onClick={[Function]}
        >
          <input
            disabled={true}
            id="kd5o3ve2858vpjxd7wjp"
            name="boardName"
            onChange={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="Sports Analyst Cambridgeshire"
          />
        </span>
        <input
          name="deleteBoard"
          onClick={[Function]}
          type="button"
          value="Delete Board"
        />
        <input
          name="editBoard"
          onClick={[Function]}
          type="button"
          value="Edit Board"
        />
      </li>
    </ul>
    <input
      name="addBoard"
      onClick={[Function]}
      type="button"
      value="Add Board"
    />
  </div>
</Boards>
`;
